# staubli-digital-twin

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt
config/: config.yaml.example
docs/: ROADMAP.md  protocol.md
ros2_ws/src/process_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/process_bridge/process_bridge/: __init__.py
ros2_ws/src/staubli_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/staubli_bridge/staubli_bridge/: staubli_live_bridge.py
ros2_ws/src/staubli_description/: CMakeLists.txt  package.xml
ros2_ws/src/staubli_description/launch/: display.launch.py
ros2_ws/src/staubli_description/meshes/visual/cell/: aeration.stl  silo.stl
ros2_ws/src/staubli_description/rviz/: cellule.rviz  rx160l.rviz
ros2_ws/src/staubli_description/urdf/: rx160l.urdf
ros2_ws/src/staubli_dt/: package.xml  setup.cfg  setup.py
ros2_ws/src/staubli_dt/staubli_dt/: __init__.py
ros2_ws/src/staubli_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/staubli_msgs/msg/: BeadMeasure.msg  ProcessCorrection.msg  ProcessState.msg
ros2_ws/src/staubli_msgs/srv/: GetDataDir.srv  GetRobotIp.srv
ros2_ws/src/staubli_tests/: README.md  test_1_position_rviz.py  test_2_small_move.py  test_3_full_trajectory.py
ros2_ws/src/staubli_viz/: package.xml  setup.cfg  setup.py
ros2_ws/src/staubli_viz/staubli_viz/: __init__.py
tools/: dt_gui.py  dtx_gui.py  dtx_player.py  robot_simulator.py  send_command.py
val3/numericalTwins/: .dtx  .pjx  getNum.pgx  init.pgx  numericalTwins.dtx  numericalTwins.pjx  start.pgx  tCommande.pgx  tPosition.pgx  tRobot.pgx
