<?xml version="1.0"?>
<package format="3">
  <n>process_bridge</n>
  <version>0.0.1</version>
  <description>Package process_bridge — à développer en Phase 4</description>
  <maintainer email="todo@mail.com">todo</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>staubli_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
