<?xml version="1.0"?>
<package format="3">
  <name>staubli_bridge</name>
  <version>0.0.1</version>
  <description>Bridge TCP bidirectionnel entre le robot Stäubli et ROS2</description>
  <maintainer email="todo@mail.com">todo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
