<?xml version="1.0"?>
<package format="3">
  <name>staubli_description</name>
  <version>0.0.1</version>
  <description>URDF et meshes du robot Stäubli RX160L</description>
  <maintainer email="todo@mail.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
