<?xml version="1.0"?>
<package format="3">
  <name>staubli_msgs</name>
  <version>0.0.1</version>
  <description>Messages et services custom pour le jumeau numerique Staubli</description>
  <maintainer email="todo@mail.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
